Added API request
Site now makes an API request.
Processes and filters the data requested and uses it in the pie chart

--- a/brumbrum.html
+++ b/brumbrum.html
@@ -4,21 +4,12 @@
     <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
+      getData();
+      var constructorStandings = [];
 
       function drawChart() {
 
-        var data = google.visualization.arrayToDataTable([
-          ['Team', 'Points'],
-          ['Mercedes', 173],
-          ['Ferrari', 99],
-          ['Red Bull',  64],
-          ['McLaren', 18],
-          ['Racing Point',    17],
-          ['Alfa Romeo', 13],
-          ['Renault', 12],
-          ['Haas F1 Team', 8],
-          ['Toro Rosso', 4]
-        ]);
+        var data = google.visualization.arrayToDataTable(constructorStandings);
 
         var options = {
           title: 'F1 2019'
@@ -30,6 +21,43 @@
       }
 
 
+
+      function getData() {
+        let data = null;
+
+        const http_req = new XMLHttpRequest();
+        const url = 'http://ergast.com/api/f1/current/constructorStandings.json';
+        http_req.open("GET", url);
+        http_req.send();
+
+        http_req.onreadystatechange = function(e) {
+
+          if(http_req.readyState === 4 && http_req.status === 200) {
+
+            data = JSON.parse(http_req.responseText);
+
+            let standings = data.MRData.StandingsTable.StandingsLists[0].ConstructorStandings;
+
+            for (let i = 0; i < standings.length; i++) {
+                let standing = standings[i];
+                console.log('#' + standing.position, standing.Constructor.name, "-", standing.points);
+            }
+
+            // add constructor names and respective points to constructorStandings array
+            for (let i = 0; i < standings.length; i++) {
+                let standing = standings[i];
+                constructorStandings.push([standing.Constructor.name, parseInt(standing.points, 10)]);
+            }
+
+            // pie chart categories
+            constructorStandings.unshift(['Team', 'Points']);
+
+
+          }
+              
+        }
+
+      }
 
     </script>
   </head>
