--- a/brumbrum.html
+++ b/brumbrum.html
@@ -28,7 +28,7 @@
         let data = null;
 
         const http_req = new XMLHttpRequest();
-        const url = 'http://ergast.com/api/f1/current/constructorStandings.json';
+        const url = 'https://ergast.com/api/f1/current/constructorStandings.json';
         http_req.open("GET", url);
         http_req.send();
 
