Added driver table div

--- a/brumbrum.html
+++ b/brumbrum.html
@@ -4,8 +4,9 @@
   	<script type="text/javascript" src="js/brumbrum.js"></script>
   </head>
   <body>
-    <div id="piechart" style="width: 900px; float:left; height: 450px; background:gray; margin:10px";></div>
-    <div id="TopFivepiechart" style="width: 900px; float:left; height: 450px; background:yellow; margin:10px;"></div>
+    <div id="piechart" style="width: 900px; float:left; height: 450px; margin:10px";></div>
+    <div id="TopFivepiechart" style="width: 900px; float:left; height: 450px; margin:10px;"></div>
+    <div id="driverTable" style="width: 900px; float: right; height: 450px"></div>
 
   </body>
 </html>
